# echo_logger

./: .gitignore  CMakeLists.txt  README.md  main.cc
src/logger/: filesystem_writer.cc  filesystem_writer.hh  log_level.hh  log_message.hh  logger.cc  logger.hh  logger_configuration.hh  logging_engine.cc  logging_engine.hh  title_and_source_location.hh
src/status/: status.hh
src/utils/: uuid_utilities.cc  uuid_utilities.hh
src/uuid/: uuid_utilities.cc  uuid_utilities.hh
